Fix footer overflow issue

--- a/master.css
+++ b/master.css
@@ -112,6 +112,7 @@ body {
 #footer-container {
     position: fixed;
     bottom: 0;
+    z-index: 9999;
 }
 
 a {
